--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :price %>
+    <%= f.label "Price" %>
     <%= f.number_field :price, {id: :item_price, required: true, min: 0} %>
   </div>
 
