--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,5 +1,26 @@
 <h1>Merchants</h1>
 
+<div class="leaderboard">
+  <div class="leaderboard_container">
+    <h2>Leaderboard</h2>
+    <div class="stat_1">
+      <p><b>Top 10 Merchants who sold the most items in the past month:</b></p>
+      <ol>
+        <% @merchants.most_items_sold_past_month.each do |merchant|%>
+          <li><%=merchant.name%></li>
+        <%end%>
+      </ol>
+    </div>
+    <div class="stat_2">
+      <p><b>Top 10 Merchants who fulfilled non-cancelled orders in the past month:</b></p>
+      <ol>
+
+
+      </ol>
+  </div>
+  </div>
+</div>
+
 <table>
   <thead>
     <tr>
