--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -2,6 +2,8 @@
 
 <p><%= link_to "Edit Profile Data", current_admin? ? edit_user_path(@merchant.id) : profile_edit_path %></p>
 <p><%= link_to 'My Items for Sale', current_admin? ? merchant_items_path(@merchant) : dashboard_items_path %>
+<p><%=button_to "Export Client Emails", customer_emails_path(@merchant, format: :csv)%></p>
+<p><%=button_to "Export Non Customer Emails", non_customer_emails_path(@merchant, format: :csv)%></p>
 
 <div id="stats">
   <div id="inv-stats">
